Step indicator mobile alignment issue fixed

--- a/src/app/customer-type-canvas/account-imei-information/account-imei-information.component.scss
+++ b/src/app/customer-type-canvas/account-imei-information/account-imei-information.component.scss
@@ -22,3 +22,9 @@
 .error-msg-color {
     color: red;
 }
+
+@media (max-width:1024px) {
+    .step-prev-tab {
+        display: none;
+    }
+}
