--- a/src/app/customer-type-canvas/account-information/account-information.component.scss
+++ b/src/app/customer-type-canvas/account-information/account-information.component.scss
@@ -12,6 +12,12 @@
     margin-bottom: 15px;
 }
 
+@media (max-width:1024px) {
+    .step-prev-tab {
+        display: none;
+    }
+}
+
 @media (min-width:768px) {
     /* Tab and Desktop */
     .cta-button-group .btn {
