--- a/src/app/customer-type-canvas/confirmation/confirmation.component.scss
+++ b/src/app/customer-type-canvas/confirmation/confirmation.component.scss
@@ -11,3 +11,9 @@
     content: "\e903";
     font-family: 'icoControls' !important;
 }
+
+@media (max-width:1024px) {
+    .step-prev-tab {
+        display: none;
+    }
+}
