--- a/src/app/customer-type-canvas/customer-type-canvas.component.scss
+++ b/src/app/customer-type-canvas/customer-type-canvas.component.scss
@@ -14,3 +14,9 @@ wireless-number{
         padding: 50px 0;
     }
 }
+
+@media (max-width:1024px) {
+    .step-prev-tab {
+        display: none;
+    }
+}
